--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,6 @@
-# 后端配置
-NODE_ENV=development
 PORT=3000
-STATIC_DIR=src/frontend
+STATIC_DIR=public
 RUN_DIR=run
 
 # CORS配置
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
-
-# 前端配置
-VITE_API_BASE_URL=/api
+ALLOWED_ORIGINS=http://localhost:3000
