--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "exif",
   "version": "1.0.1",
-  "main": "src/backend/server.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "NODE_ENV=development PORT=3000 node src/backend/server.js",
-    "prod": "NODE_ENV=production PORT=8000 node src/backend/server.js",
-    "build": "vite build"
+    "dev": "node server.js",
+    "prod": "node server.js"
   },
   "keywords": [
     "exif",
@@ -14,15 +13,12 @@
   ],
   "author": "",
   "license": "ISC",
-  "description": "本地图像元数据解析工具",
+  "description": "ExifReader",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "exif-parser": "^0.1.12",
     "express": "^4.21.1"
-  },
-  "devDependencies": {
-    "terser": "^5.44.1",
-    "vite": "^7.2.6"
   }
 }
